# decode

./: .gitignore  Cargo.toml  README.md  deny.toml  dist-workspace.toml  rust-toolchain.toml
.github/workflows/: check.yml
