[package]
name = "decode"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[workspace.lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap-stdin = "0.8.1"
mls-rs = "0.54.0"
proteus-wasm = { git = "https://github.com/wireapp/proteus", tag = "v2.1.3", features = [
  "serde",
] }
base64 = "0.22"
# TODO: replace this branch with a tag once 10.x releases
wire-e2e-identity = { git = "https://github.com/wireapp/core-crypto.git", branch = "main", version = "0.13.0", features = [
  "builder",
] }
