[package]
name = "decode"
repository = "https://github.com/wireapp/decode"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false

[lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[lints.rust]
unreachable_pub = "warn"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap-stdin = "0.8.1"
mls-rs = "0.54.0"
proteus-wasm = { git = "https://github.com/wireapp/proteus", tag = "v2.1.3", features = [
  "serde",
] }
base64 = "0.22"
# TODO: replace this branch with a tag once 10.x releases
wire-e2e-identity = { git = "https://github.com/wireapp/core-crypto.git", branch = "main", version = "0.13.0", features = [
  "builder",
] }

[package.metadata.dist]
dist = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
